force-app/main/default/objects/TipoDocumento__c/TipoDocumento__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado donde indicaremos los tipos de documentos que tendrán campos extra para el metadato.</description>
    <label>Tipo de Documento</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Tipo de Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipos de Documentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>