force-app/main/default/objects/TipoDocumento__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>ID externo para la carga de campos de documentos</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>