force-app/main/default/objects/TipoDocumento__c/fields/SubidaComunidad__c.field-meta.xml
<CustomField>
    <fullName>SubidaComunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicará que el tipo de documento puede ser subido desde la comunidad por los usuarios al gestor documental.</description>
    <label>Subida a través de comunidad</label>
    <type>Checkbox</type>
</CustomField>