force-app/main/default/objects/TipoDocumento__c/fields/TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumento__c</fullName>
    <description>Tipo de documento al que se le añaden campos adicionales</description>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>