force-app/main/default/objects/TipoDocumento__c/fields/ValorEtiqueta__c.field-meta.xml
<CustomField>
    <fullName>ValorEtiqueta__c</fullName>
    <description>Almacenará el valor de la etiqueta que se mostrará en la comunidad del tipo de documento.</description>
    <label>Valor etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>