force-app/main/default/objects/TipoDocumento__c/fields/VisibleComunidad__c.field-meta.xml
<CustomField>
    <fullName>VisibleComunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicará que el tipo de documento tendrá la posibilidad de ser consultado desde la comunidad por los usuarios.</description>
    <label>Visible en comunidad</label>
    <type>Checkbox</type>
</CustomField>