force-app/main/default/objects/TipoDocumento__c/listViews/Todos_los_Tipos_de_Documentos.listView-meta.xml
<ListView>
    <fullName>Todos_los_Tipos_de_Documentos</fullName>
    <columns>NAME</columns>
    <columns>ExternalID__c</columns>
    <columns>TipoDocumento__c</columns>
    <columns>VisibleComunidad__c</columns>
    <columns>SubidaComunidad__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Tipos de Documentos</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>